# bevy-jam

./: Cargo.toml  LICENSE  README.md
assets/: levels.ldtk
assets/images/: character.json
src/: debug.rs  main.rs
src/animation/: data.rs  mod.rs
src/ldtk/: data.rs  mod.rs  plugin.rs
