[package]
name = "bevy-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.5"
bevy = "0.6"
bevy_rapier2d = { version = "*", features = ["simd-stable", "render"] }
bevy_prototype_lyon = "0.4.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
geo = "0.18.0"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
